# solana-llm-oracle

./: .gitignore  Anchor.toml  Cargo.toml  README.md  codama.json  package.json  pnpm-lock.yaml
oracle/: .env.example  Cargo.toml
oracle/src/: main.rs  types.rs
programs/ai-oracle/: Cargo.toml
programs/ai-oracle/src/: error.rs  lib.rs
programs/ai-oracle/src/instructions/: callback_from_llm.rs  create_chat.rs  create_llm_inference.rs  initialize.rs  mod.rs
programs/ai-oracle/src/state/: config.rs  mod.rs
programs/defi-score-agent-example/: Cargo.toml
programs/defi-score-agent-example/src/: lib.rs
programs/solana-llm-oracle/: Cargo.toml
programs/solana-llm-oracle/src/: constants.rs  lib.rs
programs/solana-llm-oracle/src/instructions/: callback_from_llm.rs  callback_test.rs  create_chat.rs  create_llm_inference.rs  delegate.rs  initialize.rs  mod.rs
programs/solana-llm-oracle/src/state/: chat_context.rs  inference.rs  mod.rs
tests/: ai-oracle.ts  defi-score-agent-example.ts  solana-llm-oracle.ts
