[package]
name = "oracle"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
log = "0.4.28"
simple_logger = "5.1.0"
tokio = {version = "1.48.0", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "^2.1.16"
solana-sdk = "^2.1.16"
solana-account-decoder = "^2.1.16"
solana-llm-oracle ={ path = "../programs/solana-llm-oracle", features = ["cpi"]}
tokio-stream = "0.1.17"
anchor-lang = "0.31.1"
dotenvy = "0.15.7"
