[package]
name = "defi-score-agent-example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defi_score_agent_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
solana-llm-oracle ={ path = "../solana-llm-oracle", features = ["cpi"]}

