[package]
name = "solana-llm-oracle"
version = "0.1.0"
description = "LLM oracle for inference in solana programs"
edition = "2021"
repository = "https://github.com/GauravBurande/solana-llm-oracle"
readme = "../../README.md"
keywords = ["solana", "oracle", "llm", "web3"]
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_llm_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = { version = "0.2.12", features = ["anchor"] }